# NeuralAmpModelerCore_WASM

./: CMakeLists.txt  README.md
AudioDSPTools/: NoiseGate.cpp  NoiseGate.h
NAM/: dsp.h  get_dsp.cpp
models/: chug.nam  evh.nam
scripts/: build_wasm.bat
wasmTools/: CMakeLists.txt  loadwebmodel(old).cpp  loadwebmodel.cpp
